feat: initial style configuration

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+:root
+    --bg-color: #24021f
+    --second-bg-color: #42053f
+    --text-color: white
+    --main-color:#60075e
+
+*
+    font-family: 'Roboto', sans-serif
+    text-decoration: none
+    box-sizing: border-box
+    scroll-behavior: smooth
+
+html
+    overflow-x: hidden
+
+body
+    background: var(--bg-color)
+    color: var(--text-color)
