feat: home component done

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<section class="content">
+    <div class="content-left">
+        <code>&lt;Hello World&gt;</code>
+        <h1>João V. Leão</h1>
+        <h2>Desenvolvedor Front-end.</h2>
+        <div class="social-icons">
+            <a href="https://github.com/joao-leao"><i class='bx bxl-github'></i></a>
+            <a href="https://www.linkedin.com/in/joao-vitor-d-leao/"><i class='bx bxl-linkedin-square' ></i></a>
+        </div>
+    </div>
+    <div class="content-right">
+        <img src="./assets/imgs/ilustrativa.jpg" alt="imagem ilustrativa">
+    </div>
+</section>
