--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,8 +1,9 @@
 :root
-    --bg-color: #24021f
-    --second-bg-color: #42053f
+    --bg-color: #24001e
+    --second-bg-color: #390734
     --text-color: white
-    --main-color:#60075e
+    --main-color:#631660
+    --roxo-claro:#771d76
 
 *
     font-family: 'Roboto', sans-serif
