--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,6 +5,14 @@
     --main-color:#631660
     --roxo-claro:#771d76
 
+    --orange: #E34F26
+    --orange-2: #DE4C36
+    --blue: #1B73BA
+    --red: #E23237
+    --yelow: #F0DB4F
+    --black: #000
+    --light-blue: #73A1FB
+    
 *
     font-family: 'Roboto', sans-serif
     text-decoration: none
