feat: contact component created

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,27 @@
-<p>contact works!</p>
+<section class="contact">
+    <h3>Contato</h3>
+    <p>Muito obrigado por chegar até aqui!</p>
+    <div class="container">
+        <div class="div-left">
+            <ul>
+                <li class="li email">
+                    <i class='bx bx-envelope bx-flashing' ></i>
+                    flocoswhite@gmail.com
+                    <button class="copy">
+                        <i class='bx bx-copy'></i>
+                    </button>
+                </li>
+                <li class="li tell">
+                    <i class='bx bx-mobile-alt bx-tada' ></i>
+                    (62) 993305993
+                    <button class="copy">
+                        <i class='bx bx-copy'></i>
+                    </button>
+                </li>
+            </ul>
+        </div>
+        <div class="div-right">
+            <img src="./assets/imgs/iconMensagem.png" alt="Ícone de mensagem">
+        </div>
+    </div>
+</section>
