--- a/src/app/components/contact/contact.component.sass
+++ b/src/app/components/contact/contact.component.sass
@@ -51,6 +51,7 @@
     border: 1px solid transparent
     border-radius: 6px
     cursor: pointer
+    transition: background-color 0.3s ease
 
 .bx-mobile-alt, .bx-envelope
     
@@ -60,6 +61,18 @@
 .copy .bx-copy
     color: rgba(255, 255, 255, 0.61)
     font-size: 30px
+
+.copy .bx-check
+    color: green
+    font-size: 30px
+
+.copy:hover
+    background: rgba(255, 255, 255, 0.11)
+    color: rgba(255, 255, 255, 0.671)
+
+.copy:active
+    background: rgba(190, 8, 245, 0.295)
+    color: rgba(190, 8, 245, 0.884)
 
 .div-right img
     width: 500px
