feat: button whats, footer component done

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -21,6 +21,7 @@
                     </button>
                 </li>
             </ul>
+            <a class="btn-whats" href="https://wa.me/5562993305993" target="_blank" title="começar uma conversa"><i class='bx bxl-whatsapp'></i>Whatsapp</a>
         </div>
         <div class="div-right">
             <img src="./assets/imgs/iconMensagem.png" alt="Ícone de mensagem">
