--- a/src/app/components/contact/contact.component.sass
+++ b/src/app/components/contact/contact.component.sass
@@ -23,7 +23,8 @@
 
 .div-left
     display: flex
-    align-items: center
+    justify-content: center
+    flex-direction: column
     width: auto
   
 
@@ -73,6 +74,34 @@
 .copy:active
     background: rgba(190, 8, 245, 0.295)
     color: rgba(190, 8, 245, 0.884)
+
+.btn-whats
+    display: flex
+    align-items: center
+    justify-content: center
+    height: 60px
+    width: 200px
+    margin: 10px 0 0 20px
+    
+    border: 2px solid var(--roxo-claro)
+    border-radius: 10px
+    background: none
+    cursor: pointer
+    color: var(--roxo-claro)
+    font-size: 18px
+    text-transform: uppercase
+    font-weight: 600
+    transition: 0.3s ease-in-out
+
+.btn-whats .bxl-whatsapp
+    margin-right: 10px
+    font-size: 28px
+
+.btn-whats:hover
+    background: var(--roxo-claro)
+    color: white
+    transform: scale (1.3)translateY(-5px)
+    box-shadow: 0 0 25px var(--main-color)
 
 .div-right img
     width: 500px
