feat: done Active Nav Link on Scroll

--- a/src/app/components/about/about.component.sass
+++ b/src/app/components/about/about.component.sass
@@ -1,6 +1,6 @@
 .about 
-    gap: 12rem
-    padding: 20px 18rem
+    column-gap: 12rem
+    padding: 12rem
     display: flex
     justify-content: center
     background-color: var(--second-bg-color)
