--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="contact">
+<section class="contact" id="contact">
     <h3>Contato</h3>
     <p>Muito obrigado por chegar até aqui!</p>
     <div class="container">
