--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -3,7 +3,7 @@
     top: 0
     left: 0
     width:100%
-    padding: 2rem 9%
+    padding: 24px 9%
     background: rgba(0, 0, 0, 0.4)
     backdrop-filter: blur(10px)
     display: flex
@@ -22,16 +22,30 @@
     transform: scale(1.1)
 
 .navbar a
+    position: relative
     font-size: 1.6rem
     color: var(--text-color)
     margin-left: 4rem
     font-weight: 500
-    transition: 0.3s ease-in-out
-    border-bottom: 3px solid transparent
+    text-decoration: none
+    transition: .3s 
 
-.navbar a:hover
+.navbar a:hover, .navbar .active
     color: var(--main-color)
-    border-bottom: 3px solid var(--main-color)
+
+.navbar a::before 
+    content: ''
+    position: absolute
+    top: 100%
+    left: 0
+    width: 0
+    height: 2px
+    background: #fff
+    transition: .3s
+
+.navbar a:hover::before, .navbar .active::before
+    width: 100%
+    background: var(--main-color)
 
 #menu-icon
     font-size: 3.6rem
