--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -2,9 +2,9 @@
     display: flex
     justify-content: center
     align-items: center
-    margin-top: 7.2rem
+    padding: 12rem 0 14rem 0
     gap: 18rem
-    background: var(--second-bg-color)
+    background: var(--bg-color)
     color: var(--text-color)
 
 .content-left code
@@ -22,7 +22,7 @@
     max-width: 428px
     white-space: nowrap
     overflow: hidden
-    color: var(--roxo-claro)
+    color: var(--main-color)
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.418)
 
     border-right: .25rem solid var(--bg-color)
@@ -46,7 +46,7 @@
   from, to  
     border-color: transparent 
   50%  
-    border-color: var(--bg-color)
+    border-color: var(--main-color)
 
 
 .social-icons a
