--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<section class="section-projects">
+<section class="section-projects" id="projects">
     <h3>Projetos</h3>
     <div class="projects">
         <div class="project" *ngFor="let project of projects">
