--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<section class="section-skills">
+<section class="section-skills" id="skills">
     <div class="conteiner-title">
         <h3>Skills</h3>
     </div>
