--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,8 +1,8 @@
 :root
-    --bg-color: #24001e
-    --second-bg-color: #390734
+    --bg-color: #1b003a
+    --second-bg-color: #230443
     --text-color: white
-    --main-color:#631660
+    --main-color:#5f165e
     --roxo-claro:#771d76
 
     --orange: #E34F26
