--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="about">
+<section class="about" id="about">
     <div class="about__photo">
         <img src="./assets/imgs/ilustrativa.jpg" alt="">
     </div>
@@ -6,4 +6,4 @@
         <h3>Sobre <span>mim</span></h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, fugiat quos consequuntur dignissimos atque asperiores ea unde aliquam tenetur mollitia beatae magnam, similique corrupti sed laudantium? Nihil earum fugiat distinctio.</p>
     </div>
-</div>
+</section>
