--- a/src/app/components/projects/projects.component.sass
+++ b/src/app/components/projects/projects.component.sass
@@ -1,5 +1,7 @@
 .section-projects
     display: block
+    padding: 4rem 0
+    background: var(--second-bg-color)
 
 h3
     width: 100%
@@ -45,7 +47,7 @@ h3
     font-size: 2rem
     font-weight: 900
     margin: 0
-    color: white
+    color: var(--text-color)
 
 .project-description p
     min-height: 80px
