--- a/src/app/components/skills/skills.component.sass
+++ b/src/app/components/skills/skills.component.sass
@@ -1,5 +1,6 @@
 .section-skills
-    background-color: var(--second-bg-color)
+    background-color: var(--bg-color)
+    padding: 4rem 0
 
 .conteiner-title
     width: 100%
@@ -9,7 +10,7 @@
 .conteiner-title h3
     font-size: 5rem
     margin: 4rem 0
-    text-shadow: 0 0 100px var(--roxo-claro)
+    text-shadow: 0 0 100px var(--main-color)
     
 .skills
     display: flex
@@ -27,6 +28,10 @@
     gap: 8px
     justify-content: center
     align-items: center
+    background: rgb(53, 0, 70)
+    box-shadow: 0 0 40px rgb(20, 8, 41)
+   
+    border-radius: 10px
 
 .skill h5
     font-size: 1.4rem
@@ -37,7 +42,7 @@
     width: 4rem
     object-fit: cover
     margin: 10px
-    filter: drop-shadow(0 0 30px var(--roxo-claro))
+    filter: drop-shadow(0 0 30px var(--main-color))
 
 .skill progress
     height: 10px
