feat: responsive header

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,6 +4,6 @@
     </div>
     <div class="about__text">
         <h3>Sobre <span>mim</span></h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, fugiat quos consequuntur dignissimos atque asperiores ea unde aliquam tenetur mollitia beatae magnam, similique corrupti sed laudantium? Nihil earum fugiat distinctio.</p>
+        <p>Olá! Atualmente, sou João Vitor, que está cursando Análise e Desenvolvimento de Sistemas. Concluí diversos cursos de desenvolvimento Front-End e, atualmente, estou extremamente entusiasmado com a possibilidade de aplicar meu conhecimento e desenvolver minhas habilidades em um ambiente profissional dinâmico. Enquanto não consigo a primeira vaga, vou aperfeiçoando-me em diversos cursos e registrando os meus projetos no GitHub. Você pode pedir um serviço, para saber mais, entre em contato.</p>
     </div>
 </section>
