--- a/src/app/components/about/about.component.sass
+++ b/src/app/components/about/about.component.sass
@@ -8,6 +8,7 @@
 .about__photo img
     position: relative
     width: 28vw
+    margin-right: 3rem
     border-radius: 50%
     box-shadow: 0 0 25px var(--main-color)
     top: 1rem
@@ -26,4 +27,8 @@
     text-shadow: 0 0 50px var(--main-color)
 
 .about__text p
-    font-size: 1.5rem
+    width: 500px
+    font-size: 1.4rem
+    
+    text-align: start
+    color: #ffffffd5
