--- a/src/app/components/skills/skills.component.sass
+++ b/src/app/components/skills/skills.component.sass
@@ -1,6 +1,6 @@
 .section-skills
     background-color: var(--bg-color)
-    padding: 4rem 0
+    padding: 4rem 0 8rem 0
 
 .conteiner-title
     width: 100%
