feat: making the website responsive

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,9 +1,15 @@
-<section class="about" id="about">
-    <div class="about__photo">
-        <img src="./assets/imgs/ilustrativa.jpg" alt="">
-    </div>
-    <div class="about__text">
-        <h3>Sobre <span>mim</span></h3>
-        <p>Olá! Atualmente, sou João Vitor, que está cursando Análise e Desenvolvimento de Sistemas. Concluí diversos cursos de desenvolvimento Front-End e, atualmente, estou extremamente entusiasmado com a possibilidade de aplicar meu conhecimento e desenvolver minhas habilidades em um ambiente profissional dinâmico. Enquanto não consigo a primeira vaga, vou aperfeiçoando-me em diversos cursos e registrando os meus projetos no GitHub. Você pode pedir um serviço, para saber mais, entre em contato.</p>
+<section id="about">
+    <div class="about">
+        <div class="about__photo">
+            <img src="./assets/imgs/ilustrativa.jpg" alt="">
+        </div>
+        <div class="about__text">
+            <h3>Sobre <span>mim</span></h3>
+            <p>Olá! Atualmente, sou João Vitor, que está cursando Análise e Desenvolvimento de Sistemas. Concluí
+                diversos cursos de desenvolvimento Front-End e, atualmente, estou extremamente entusiasmado com a
+                possibilidade de aplicar meu conhecimento e desenvolver minhas habilidades em um ambiente profissional
+                dinâmico. Enquanto não consigo a primeira vaga, vou aperfeiçoando-me em diversos cursos e registrando os
+                meus projetos no GitHub. Você pode pedir um serviço, para saber mais, entre em contato.</p>
+        </div>
     </div>
 </section>
