--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,7 +5,7 @@
         <div class="div-left">
             <ul>
                 <li class="li email">
-                    <i class='bx bx-envelope bx-flashing' ></i>
+                    <i class='bx bx-envelope bx-flashing'></i>
                     flocoswhite@gmail.com
                     <button class="copy" (click)="copiarEmail()" title="Copiar email para a área de transferência">
                         <i class='bx bx-copy' *ngIf="copy1"></i>
@@ -13,7 +13,7 @@
                     </button>
                 </li>
                 <li class="li tell">
-                    <i class='bx bx-mobile-alt bx-tada' ></i>
+                    <i class='bx bx-mobile-alt bx-tada'></i>
                     (62) 993305993
                     <button class="copy" (click)="copiarNumero()" title="Copiar número para a área de transferência">
                         <i class='bx bx-copy' *ngIf="copy2"></i>
@@ -21,7 +21,8 @@
                     </button>
                 </li>
             </ul>
-            <a class="btn-whats" href="https://wa.me/5562993305993" target="_blank" title="começar uma conversa"><i class='bx bxl-whatsapp'></i>Whatsapp</a>
+            <a class="btn-whats" href="https://wa.me/5562993305993" target="_blank" title="começar uma conversa"><i
+                    class='bx bxl-whatsapp'></i>Whatsapp</a>
         </div>
         <div class="div-right">
             <img src="./assets/imgs/iconMensagem.png" alt="Ícone de mensagem">
