--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -11,6 +11,7 @@
     font-size: 20px
     text-transform: capitalize
     color: white
+    opacity: .85
 
 .footer a
     text-decoration: none
@@ -19,4 +20,17 @@
 .footer a:active
     color: rgb(255, 0, 221)
 
-    
+@media (0px <= width <= 590px)
+    .footer
+        height: 64px
+
+    .footer p
+        font-size: 16px
+
+@media (0px <= width <= 430px)
+    .footer
+        height: 50px
+
+    .footer p
+        font-size: 12px
+      
