--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header" >
-    <a href="#home" class="logo">João<span>Leão</span> </a>
+    <a href="#home" class="logo"><span>&lt;</span>Portfolio<span>&gt;</span></a>
 
-    <button id="menu-icon" class="hamburger" (click)="HiddenNav()" [ngClass]="{'showBt': buttonAnimation}" >
+    <button id="menu-icon" class="hamburguer" (click)="HiddenNav()" [ngClass]="{'showBt': buttonAnimation}" >
         <!-- <i class='bx bx-menu'></i> -->
     </button>
     
