--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="content">
+<section class="content" id="home">
     <div class="content-left">
         <code>&lt;Hello World&gt;</code>
         <h1>João V. Leão</h1>
