--- a/src/app/components/skills/skills.component.sass
+++ b/src/app/components/skills/skills.component.sass
@@ -73,3 +73,30 @@
         background: var(--light-blue)
     
     
+@media (0px <= width < 768px) 
+    .skills
+        margin: 0 2rem
+
+@media (0px <= width <= 430px)
+    .conteiner-title h3
+        font-size: 3.2rem 
+
+    .skills
+        margin: 0
+
+    .skill
+        width: 210px
+        height: 170px
+        gap: 0
+        
+    .skill h5
+        font-size: 1rem
+        margin: 0
+    
+    .skill img
+        width: 3.4rem
+        margin: 8px
+
+    .skill progress
+        height: 8px
+        width: 130px
