--- a/src/app/components/projects/projects.component.sass
+++ b/src/app/components/projects/projects.component.sass
@@ -9,7 +9,7 @@ h3
     justify-content: center
     margin: 4rem 0
     font-size: 5rem
-    
+
 .projects
     display: flex
     flex-flow: row wrap
@@ -27,15 +27,17 @@ h3
     border-radius: 20px
     box-shadow: 0 8px 24px hsla(0, 0%, 0%)
     
+
 .project-img img
     width: 100%
-    border-radius: 20px
+
+    
 
 .project-description
     position: absolute
     top: 13.75rem
     width: 100%
-    border-radius: 20px 
+    border-radius: 20px 20px 0 0 
     background-color: rgb(66, 39, 114)
     padding: 2.125rem
     transition: top 0.4s ease
@@ -53,14 +55,12 @@ h3
     min-height: 80px
     font-size: 18px
     color: #d8d8d8
-    
 
 .project-description ul
     display: flex
     list-style-type: none
     padding: 0
     color: rgb(193, 60, 255)
-    
 
 .project-description ul li
     padding: 6px 10px
@@ -79,10 +79,67 @@ h3
     transition: 0.3s ease-in-out
     text-decoration: none
     cursor: pointer
-    
+
 .project-description a button:hover
     color: white
     border: 1px solid white
     transform: scale (1.3)translateY(-5px)
     box-shadow: 0 0 25px var(--main-color)
     background-color: var(--main-color)
+
+@media (0px <= width <= 590px)
+    .projects
+        margin: 0 auto
+    
+    .project
+        width: 300px
+        height: 300px
+
+    .project-description
+        top: 7.3rem
+        padding: 1.2rem
+
+    .project-description:hover
+        top: 1%
+
+    .project-description h4
+        font-size: 1.4rem
+
+    .project-description p
+        margin: 10px 0
+        min-height: 120px
+
+@media (0px <= width <= 430px)
+
+    h3
+        margin: 4rem 0
+        font-size: 3.2rem
+
+    .project
+        width: 250px
+        height: 250px
+
+    .project-description
+        top: 7rem
+        padding: 1rem
+
+    .project-description:hover
+        top: 5%
+
+    .project-description h4
+        font-size: 1rem
+
+    .project-description p
+        min-height: 80px
+        margin: 8px 0
+        font-size: 14.5px
+
+    .project-description ul li
+        padding: 6px 8px
+        margin-right: 6px
+        font-size: 12px
+
+    .project-description a button
+        padding: 14px
+        font-size: 14px
+        
