fix: ironing out details

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,8 +4,8 @@
         <h1>João V. Leão</h1>
         <h2>Desenvolvedor Front-end.</h2>
         <div class="social-icons">
-            <a href="https://github.com/joao-leao"><i class='bx bxl-github'></i></a>
-            <a href="https://www.linkedin.com/in/joao-vitor-d-leao/"><i class='bx bxl-linkedin-square' ></i></a>
+            <a href="https://github.com/joao-leao" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
+            <a href="https://www.linkedin.com/in/joao-vitor-d-leao/" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin-square' ></i></a>
         </div>
     </div>
     <div class="content-right">
