fix: build error

--- a/src/app/components/contact/contact.component.sass
+++ b/src/app/components/contact/contact.component.sass
@@ -36,7 +36,7 @@
 
 .li
     display: flex
-    justify-content: start
+    justify-content: flex-start
     align-items: center
     font-size: 22px
     color: rgba(255, 255, 255, .7)
