perf: Optimizing images

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,11 +1,11 @@
 <section id="about">
     <div class="about">
         <div class="about__photo">
-            <img src="./assets/imgs/ilustrativa.jpg" alt="">
+            <img src="./assets/imgs/cartoon.png" alt="">
         </div>
         <div class="about__text">
             <h3>Sobre <span>mim</span></h3>
-            <p>Olá! Atualmente, sou João Vitor, que está cursando Análise e Desenvolvimento de Sistemas. Concluí
+            <p>Olá! Sou João Vitor, estou cursando Análise e Desenvolvimento de Sistemas. Concluí
                 diversos cursos de desenvolvimento Front-End e, atualmente, estou extremamente entusiasmado com a
                 possibilidade de aplicar meu conhecimento e desenvolver minhas habilidades em um ambiente profissional
                 dinâmico. Enquanto não consigo a primeira vaga, vou aperfeiçoando-me em diversos cursos e registrando os
