--- a/src/app/components/about/about.component.sass
+++ b/src/app/components/about/about.component.sass
@@ -8,6 +8,10 @@
     display: flex
     justify-content: space-around
     align-items: center
+
+.about__photo
+    background: var(--main-color)
+    border-radius: 50%
     
 .about__photo img
     width: 500px
