--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,6 +9,6 @@
         </div>
     </div>
     <div class="content-right">
-        <img src="./assets/imgs/ilustrativa.jpg" alt="imagem ilustrativa">
+        <img src="./assets/imgs/ilustrativa.png" alt="imagem ilustrativa">
     </div>
 </section>
