--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <section id="about">
     <div class="about">
         <div class="about__photo">
-            <img src="./assets/imgs/cartoon.png" alt="">
+            <img src="./assets/imgs/cartoon.png" alt="Cartoon ilustrativo">
         </div>
         <div class="about__text">
             <h3>Sobre <span>mim</span></h3>
