--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -21,7 +21,7 @@
                     </button>
                 </li>
             </ul>
-            <a class="btn-whats" href="https://wa.me/5562993305993" target="_blank" title="começar uma conversa"><i
+            <a class="btn-whats" href="https://wa.me/5562993305993" target="_blank" title="começar uma conversa no Whatsapp"><i
                     class='bx bxl-whatsapp'></i>Whatsapp</a>
         </div>
         <div class="div-right">
