--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
 
-    <p>&copy; 2024 João V. D. Leão | Cartoons designed by <a href="https://www.freepik.com/" target="_blank">Freepik</a>
+    <p>&copy; 2024 João V. D. Leão | Cartoons designed by <a href="https://www.freepik.com/" target="_blank" title="Site Freepik">Freepik</a>
     </p>
 </footer>
