--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -11,8 +11,8 @@
                 <ul>
                     <li *ngFor="let tech of project.technologies">{{ tech }}</li>
                 </ul>
-                <a [href]="project.urlLive" target="_blank" rel="noopener noreferrer"><Button>Visualizar</Button></a>
-                <a [href]="project.urlGitHub" target="_blank" rel="noopener noreferrer"><Button>Repositório</Button></a>
+                <a [href]="project.urlLive" target="_blank" rel="noopener noreferrer" title="Visualizar Página"><Button>Visualizar</Button></a>
+                <a [href]="project.urlGitHub" target="_blank" rel="noopener noreferrer" title="Visualizar Repositório"><Button>Repositório</Button></a>
             </div>
         </div>
     </div>
