--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -5,7 +5,7 @@
     <div class="skills">
         <div class="skill" *ngFor="let skill of skills">
             <h5>{{ skill.name}}</h5>
-            <img [src]="skill.img" alt="logo Javascript">
+            <img [src]="skill.img" [alt]="skill.descImg">
             <progress [class]="skill.color" [value]="skill.score" max="100"></progress>
         </div>
 
